@@ -1,3 +1,12 @@
+2011-05-9 Yu-Sung Su     <suyusung@tsinghua.edu.cn> 
+   * DESCRIPTION (Version, Date): 1.4-10
+   * R/display: fix a bug in display.lm that fails to print out se.
+
+
+2011-05-8 Yu-Sung Su     <suyusung@tsinghua.edu.cn> 
+   * DESCRIPTION (Version, Date): 1.4-09
+   * R/binnedplot: fix a bug of no sd when binnedplot only get one point.
+
 2011-04-24 Yu-Sung Su     <suyusung@tsinghua.edu.cn> 
    * DESCRIPTION (Version, Date): 1.4-08
    * display: now return objects after displaying the fitted model.
